fix misalign on resize

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 .header-grid {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.9);
     width: 100vw;
     max-height: 50vw;
 
@@ -34,8 +34,16 @@ h1 {
 .title {
     text-transform: uppercase;
     font-size: 8vw;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-color: yellow;
+    -webkit-text-stroke-width: 2px;
+
 
 }
+
+.outline {
+    -webkit-text-stroke-color: white;
+ }
 
 .one {
     grid-row: 1 / 2;
@@ -61,7 +69,7 @@ h1 {
     grid-row: 3 / 5;
     grid-column: 1 / 2;
     position: relative;
-    top: 38.1%;
+    top: 38.5%;
     left: 6%;
     
 }
@@ -82,6 +90,7 @@ h1 {
 
 .three-inside {
     position: relative;
+    top: 0.2%;
     right: 21.8%;
     
 }
